<resources>
    <string name="app_name">SmartFarm</string>

    <string name="SmartFarm">SmartFarm</string>
    <string name="detailViewTitle">Smart Farm</string>
    <string name="farmState">농장 상태</string>
    <string name="moreShow">더보기</string>
    <string name="waterView">수분</string>
    <string name="ledView">LED</string>
    <string name="tempView">온도</string>
    <string name="humidity">토양습도</string>
    <string name="cameraView">카메라</string>
    <string name="co2View">공기질</string>
    <string name="fanView">환풍기</string>
</resources>